# isa_benchmarks

./: Cargo.toml  README.md  flake.nix  justfile  results.txt
.cargo/: config.toml
reports/: eth_block.txt  fibonacci.txt  iter_keccak.txt  iter_sha.txt
reports/riscv64/: fibonacci.txt  iter_keccak.txt  iter_sha.txt
reports/wasm/: eth_block.txt  fibonacci.txt  iter_sha.txt
scripts/: benchmark.sh  weighted_cost.py
wasm/: Makefile  main.c
