[package]
name = "isa_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iter_sha"

[[bin]]
name = "iter_keccak"

[[bin]]
name = "fibonacci"

[[bin]]
name = "eth_block"

[dependencies]
sha2 = "0.10.8"
sha3 = "0.10.8"
bincode = "1.3.3"
rsp-client-executor = { git = "https://github.com/aborg-dev/rsp.git" }
wasmer = { version = "=5.0.0-rc.1" }
wasmer-middlewares = { version = "=5.0.0-rc.1" }
tokio = { version = "1.39", features = [
	"rt",
	"rt-multi-thread",
	"macros",
]}
wasmer-wasix = "0.29.0"
