[package]
name = "isa_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iter_sha"

[[bin]]
name = "iter_keccak"

[[bin]]
name = "fibonacci"

[[bin]]
name = "eth_block"

[[bin]]
name = "parse_trace"

[dependencies]
sha2 = "0.10.8"
sha3 = "0.10.8"
bincode = "1.3.3"
rsp-client-executor = { git = "https://github.com/aborg-dev/rsp.git" }
clap = { version = "4.5.20", features = ["derive"] }
